Add mobile implementation along with assets

--- a/index.html
+++ b/index.html
@@ -2,8 +2,41 @@
 <html>
 <head>
   <title>Cortlandt Labs</title>
-</head>
-<body>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/mobile.css">
+<!--   <script src="js/main.js"></script>
+ --></head>
+<body class="bg">
+  <div id="view-1">
+    <div class="logo"></div>
+    <div class="mission">architect, code, deploy.</div>
+    <!-- <div class="bottom"> -->
+      <a href="#view-2" class="arrow"></a>
+    <!-- </div> -->
+  </div>
+  <div id="view-2">
+    <div class="row-1">
+      <img class="row1-img" src="assets/chatstyle.jpg"/>
+    </div>
+    <div class="row-2">
+      <img class="row2-img" src="assets/find.jpg"/>
+    </div>
+    <div class="row-3">
+      <img class="row3-img" src="assets/pathway.jpg"/>
+    </div>
+    <div class="row-4">
+      <img class="row4-img" src="assets/gigs.jpg"/>
+    </div>
+  </div>
+  <div id="view-3">
+    <img class="cl-logo" src="assets/cortlandt-labs-logo.png" />
+    <div class="team-heading">
+      Cortlandt Labs is a technology development agency started in NYC.
+    </div>
+    <div class="picture-1"></div>
+    <div class="picture-2"></div>
+    <div class="picture-3"></div>
+  </div>
 </body>
 </html>
