--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
-<!--   <script src="js/main.js"></script>
- --></head>
+</head>
 <body class="bg">
   <div id="view-1">
     <div class="logo"></div>
@@ -34,9 +33,13 @@
     <div class="team-heading">
       Cortlandt Labs is a technology development agency started in NYC.
     </div>
-    <div class="picture-1"></div>
-    <div class="picture-2"></div>
-    <div class="picture-3"></div>
+    <div class="team">
+      <div class="picture-1"></div>
+      <div class="picture-2"></div>
+      <div class="picture-3"></div>
+    </div>
   </div>
+  <script src="js/mobile.js"></script>
+  <script type="text/javascript" src="js/iscroll/iscroll.js"></script>
 </body>
 </html>
