--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="logo"></div>
     <div class="mission">architect, code, deploy.</div>
     <!-- <div class="bottom"> -->
-      <a href="#view-2" class="arrow"></a>
+      <a href="#" class="arrow"></a>
     <!-- </div> -->
   </div>
   <div id="view-2">
@@ -40,6 +40,5 @@
     </div>
   </div>
   <script src="js/mobile.js"></script>
-  <script type="text/javascript" src="js/iscroll/iscroll.js"></script>
 </body>
 </html>
