Add favicon and remove commented html tag

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="bg">
   <div id="view-1">
     <div class="logo"></div>
     <div class="mission">architect, code, deploy.</div>
-    <!-- <div class="bottom"> -->
-      <a href="#" class="arrow"></a>
-    <!-- </div> -->
+    <a href="#" class="arrow"></a>
   </div>
   <div id="view-2">
     <div class="row-1">
