Initial commit for the desktop version of the website

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+
 </head>
 <body class="bg">
+  <div class="menu-bar">
+    <span class="menu-bar-item active">portfolio</span>
+    <span class="menu-bar-item">team</span>
+  </div>
   <div id="view-1">
     <div class="logo"></div>
     <div class="mission">architect, code, deploy.</div>
