--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Cortlandt Labs</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 </head>
 <body class="bg">
   <div class="menu-bar">
@@ -19,6 +21,9 @@
     <a href="#" class="arrow"></a>
   </div>
   <div id="view-2">
+    <div id="row-0">
+     <!-- this row takes up space to allow #view-1 divs to be shown-->
+    </div>
     <div class="row-1">
       <img class="row1-img" src="assets/chatstyle.jpg"/>
     </div>
