--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <span class="menu-bar-item active">portfolio</span>
     <span class="menu-bar-item">team</span>
   </div>
-  <div id="view-1">
-    <div class="logo"></div>
-    <div class="mission">architect, code, deploy.</div>
-    <a href="#" class="arrow"></a>
+  <div id="view-1" class="mobile">
+    <div class="logo mobile"></div>
+    <div class="mission mobile">architect, code, deploy.</div>
+    <a href="#" class="arrow mobile"></a>
   </div>
   <div id="view-2">
-    <div id="row-0">
+    <div class="row-0 desktop">
      <!-- this row takes up space to allow #view-1 divs to be shown-->
+      <div class="mission desktop">architect, code, deploy.</div>
+      <div class="logo desktop"></div>
     </div>
     <div class="row-1">
       <img class="row1-img" src="assets/chatstyle.jpg"/>
