Refactor CSS for proportional pictures
Why:
Pictures looked distorted in desktop view

How:
Changed CSS classes to Atomic CSS classes for modularity

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
       <div class="mission desktop">architect, code, deploy.</div>
       <div class="logo desktop"></div>
     </div>
-    <div class="row-1">
-      <img class="row1-img" src="assets/chatstyle.jpg"/>
+    <div class="small-height full-width med-large-width">
+      <img class="slight-transparency full-height full-width med-large-width" src="assets/chatstyle.jpg"/>
     </div>
-    <div class="row-2">
-      <img class="row2-img" src="assets/find.jpg"/>
+    <div class="small-height full-width med-large-width">
+      <img class="slight-transparency full-height full-width med-large-width" src="assets/find.jpg"/>
     </div>
-    <div class="row-3">
-      <img class="row3-img" src="assets/pathway.jpg"/>
+    <div class="small-height full-width med-large-width">
+      <img class="slight-transparency full-height full-width med-large-width" src="assets/pathway.jpg"/>
     </div>
-    <div class="row-4">
-      <img class="row4-img" src="assets/gigs.jpg"/>
+    <div class="small-height full-width med-large-width">
+      <img class="slight-transparency full-height full-width med-large-width" src="assets/gigs.jpg"/>
     </div>
   </div>
   <div id="view-3">
