--- a/index.html
+++ b/index.html
@@ -4,40 +4,31 @@
   <title>Cortlandt Labs</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" />
-  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="css/semantic.css">
+  <script src="js/dist/semantic.js"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body class="bg">
-  <div class="menu-bar">
-    <span class="menu-bar-item active">portfolio</span>
-    <span class="menu-bar-item">team</span>
+<body>
+  <div class="ui top fixed menu">
+    <a class="item active">portfolio</a>
+    <a class="item">team</a>
+    <div class="right header item">Cortlandt Labs</div>
   </div>
+  <div class="main segment">
+    <div class="ui container">
+      <div class="mission-statement">architect, code, deploy.</div>
+      <img class="logo" src="assets/Cortlandt-Labs-logo.png" />
+    </div>
+  </div>
+
   <div id="view-1" class="mobile">
     <div class="logo mobile"></div>
     <div class="mission mobile">architect, code, deploy.</div>
     <a href="#" class="arrow mobile"></a>
   </div>
-  <div id="view-2">
-    <div class="row-0 desktop">
-      <div class="mission desktop">architect, code, deploy.</div>
-      <div class="logo desktop"></div>
-    </div>
-    <div class="small-height full-width med-large-width">
-      <img class="slight-transparency full-height full-width med-large-width" src="assets/chatstyle.jpg"/>
-    </div>
-    <div class="small-height full-width med-large-width">
-      <img class="slight-transparency full-height full-width med-large-width" src="assets/find.jpg"/>
-    </div>
-    <div class="small-height full-width med-large-width">
-      <img class="slight-transparency full-height full-width med-large-width" src="assets/pathway.jpg"/>
-    </div>
-    <div class="small-height full-width med-large-width">
-      <img class="slight-transparency full-height full-width med-large-width" src="assets/gigs.jpg"/>
-    </div>
-  </div>
+
   <div id="view-3">
     <img class="cl-logo" src="assets/Cortlandt-Labs-logo.png" />
     <div class="team-heading">
@@ -50,8 +41,5 @@
     </div>
   </div>
   <script src="js/mobile.js"></script>
-  <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8="   crossorigin="anonymous"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-  <script src="js/main.js"></script>
 </body>
 </html>
