Add second and third segment

--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
   <script src="js/dist/semantic.js"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.3/components/icon.min.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="ui top fixed menu">
-    <a class="item active">portfolio</a>
+    <a class="item">portfolio</a>
     <a class="item">team</a>
-    <div class="right header item">Cortlandt Labs</div>
+    <a class="right header item">contact</div>
   </div>
-  <div class="main segment">
-    <div class="ui container">
-      <div class="mission-statement">architect, code, deploy.</div>
-      <img class="logo" src="assets/Cortlandt-Labs-logo.png" />
-    </div>
+  <div class="firstSegment segment">
+    <div class="mission-statement">architect, code, deploy.</div>
+    <img class="logo" src="assets/Cortlandt-Labs-logo.png" />
   </div>
-
+  <div class="secondSegment segment">
+  </div>
+  <div class="thirdSegment segment">
+    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>recent work</h1>
+  </div>
+<!--
   <div id="view-1" class="mobile">
     <div class="logo mobile"></div>
     <div class="mission mobile">architect, code, deploy.</div>
     <a href="#" class="arrow mobile"></a>
-  </div>
+  </div> -->
 
   <div id="view-3">
     <img class="cl-logo" src="assets/Cortlandt-Labs-logo.png" />
