unbold right menu item

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="ui top fixed menu">
     <a class="item">portfolio</a>
     <a class="item">team</a>
-    <a class="right header item">contact</div>
+    <a class="right item">contact</div>
   </div>
   <div class="firstSegment segment">
     <div class="mission-statement">architect, code, deploy.</div>
