--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
-  <script src="js/dist/semantic.js"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.3/components/icon.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="js/semantic.js"></script>
+  <script src="js/main.js"></script>
+  <script type="text/javascript" src="js/smoothScroll.js"></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
   <div class="ui top fixed menu">
-    <a class="item">portfolio</a>
+    <a class="item portfolio" href="#portfolio">portfolio</a>
     <a class="item">team</a>
     <a class="right item">contact</div>
   </div>
@@ -24,7 +28,7 @@
   <div class="secondSegment segment">
   </div>
   <div class="thirdSegment segment">
-    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>recent work</h1>
+    <h1 id="portfolio" class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>recent work</h1>
   </div>
 <!--
   <div id="view-1" class="mobile">
