Adjust scrolling portfolio position

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </div>
   <div class="secondSegment segment">
   </div>
-  <div class="thirdSegment segment">
-    <h1 id="portfolio" class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>recent work</h1>
+  <div class="thirdSegment segment" id="portfolio" >
+    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>recent work</h1>
   </div>
 <!--
   <div id="view-1" class="mobile">
