--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
   <div class="thirdSegment segment" id="portfolio" >
     <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>recent work</h1>
   </div>
-<!--
-  <div id="view-1" class="mobile">
-    <div class="logo mobile"></div>
-    <div class="mission mobile">architect, code, deploy.</div>
-    <a href="#" class="arrow mobile"></a>
-  </div> -->
+  <div class="fourthSegment segment">
+  </div>
+  <div class="fifthSegment segment">
+    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>services</h1>
+  </div>
 
   <div id="view-3">
     <img class="cl-logo" src="assets/Cortlandt-Labs-logo.png" />
