Add smoothScroll to services

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <div class="ui top fixed menu">
     <a class="item portfolio" href="#portfolio">portfolio</a>
+    <a class="item services" href="#services">services</a>
     <a class="item">team</a>
     <a class="right item">contact</div>
   </div>
@@ -32,7 +33,7 @@
   </div>
   <div class="fourthSegment segment">
   </div>
-  <div class="fifthSegment segment">
+  <div class="fifthSegment segment" id="services">
     <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>services</h1>
   </div>
 
