Set up columns for portfolio

--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@
   </div>
   <div class="secondSegment segment">
   </div>
-  <div class="thirdSegment segment" id="portfolio" >
-    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>recent work</h1>
+  <div class="thirdSegment segment" id="portfolio">
+    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>portfolio</h1>
+    <div class="ui grid container">
+      <div class="seven wide column">
+        <div class="work1"></div>
+      </div>
+      <div class="seven wide column">
+        <div class="work2"></div>
+      </div>
+      <div class="seven wide column">
+        <div class="work3"></div>
+      </div>
+      <div class="seven wide column">
+        <div class="work4"></div>
+      </div>
+    </div>
   </div>
   <div class="fourthSegment segment">
   </div>
