Add team section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="ui top fixed menu">
     <a class="item portfolio" href="#portfolio">portfolio</a>
     <a class="item services" href="#services">services</a>
-    <a class="item">team</a>
+    <a class="item team" href="#team">team</a>
     <a class="right item">contact</div>
   </div>
   <div class="firstSegment segment">
@@ -30,7 +30,7 @@
   </div>
   <div class="thirdSegment segment" id="portfolio">
     <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>portfolio</h1>
-    <div class="ui grid container">
+    <div class="ui stackable grid container">
       <div class="seven wide column">
         <div class="work1"></div>
       </div>
@@ -49,6 +49,11 @@
   </div>
   <div class="fifthSegment segment" id="services">
     <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>services</h1>
+  </div>
+  <div class="sixthSegment segment">
+  </div>
+  <div class="seventhSegment segment" id="team">
+    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>team</h1>
   </div>
 
   <div id="view-3">
