--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
   <div class="seventhSegment segment" id="team">
     <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>team</h1>
   </div>
+  <footer class="ui inverted vertical footer segment">
+    <img src="assets/Cortlandt-Labs-logo.png">
+    <h3>Built by <span>Cortlandt Labs</span></h3>
+    <p><i class="ui copyright icon"></i>2016 All Rights Reserved</p>
+  </footer>
 
   <div id="view-3">
     <img class="cl-logo" src="assets/Cortlandt-Labs-logo.png" />
