Add async to js tags

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.3/components/icon.min.css">
-  <script   src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
-  <script src="js/semantic.js"></script>
-  <script src="js/main.js"></script>
-  <script type="text/javascript" src="js/smoothScroll.js"></script>
+  <script   src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous" async></script>
+  <script src="js/semantic.js" async></script>
+  <script src="js/main.js" async></script>
+  <script type="text/javascript" src="js/smoothScroll.js" async></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
