--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.3/components/icon.min.css">
   <script   src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous" defer></script>
+  <script type="text/javascript" src="js/typed.js" defer></script>
   <script type="text/javascript" src="js/semantic.js" defer></script>
   <script type="text/javascript" src="js/main.js" defer></script>
   <script type="text/javascript" src="js/smoothScroll.js" defer></script>
@@ -23,7 +24,14 @@
     <a class="right item" href="mailto:Cortlandtlabs@gmail.com">contact</a>
   </div>
   <div class="firstSegment segment">
-    <div class="mission-statement">architect, code, deploy.</div>
+    <div class="mission-statement">
+      <span id="typing"></span>
+      <div class="statement">
+        <p>architect,</p>
+        <p>code,</p>
+        <p>deploy.</p>
+      </div>
+    </div>
     <img class="logo" src="assets/Cortlandt-Labs-logo.png" />
   </div>
   <div class="secondSegment segment">
