--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 </head>
 
 <body>
-  <div class="ui top fixed menu">
-    <a class="item portfolio" href="#portfolio">portfolio</a>
-    <a class="item services" href="#services">services</a>
-    <a class="item team" href="#team">team</a>
-    <a class="right item" href="mailto:Cortlandtlabs@gmail.com">contact</a>
+  <div class="ui container">
+    <div class="ui top fixed menu">
+      <a class="item portfolio" href="#portfolio"><span>portfolio</span></a>
+      <a class="item services" href="#services"><span>services</span></a>
+      <a class="item team" href="#team"><span>team</span></a>
+      <a class="right item" href="mailto:Cortlandtlabs@gmail.com"><span>contact</span></a>
+    </div>
   </div>
   <div class="firstSegment segment">
     <div class="mission-statement">
