--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
   </div>
   <div class="fifthSegment segment" id="values">
     <h1 class="ui header">
-      <i class="ui cortlandt-red small circle thin
-        icon">
+      <i class="ui cortlandt-red small circle thin icon">
       </i>
       values
     </h1>
@@ -95,9 +94,9 @@
       beautiful and meaningful things. 
     </p>
     <p>
-      Happiness always has and always will be about the people: our team, the open
-      source community, our partnerships. We help each other through the tough
-      times and grow through shared opportunities and learning.
+      Happiness always has and always will be about the people: our team, the 
+      open-source community, and our partnerships. We help each other through 
+      the tough times and grow through shared opportunities and learning.
     </p>
     <p>
       We're all in this together. 
