Add margin to text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
   <div class="secondSegment segment">
   </div>
   <div class="thirdSegment segment" id="portfolio">
-    <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>portfolio</h1>
+    <div class="ui container">
+      <h1 class="ui header"><i class="ui cortlandt-red small circle thin icon"></i>portfolio</h1>
+    </div>
     <div class="ui stackable grid container">
       <div class="seven wide column">
         <div class="work1"></div>
@@ -57,50 +59,55 @@
   <div class="fourthSegment segment">
   </div>
   <div class="fifthSegment segment" id="values">
-    <h1 class="ui header">
-      <i class="ui cortlandt-red small circle thin icon">
-      </i>
-      values
-    </h1>
-    <p>
-      From product/market fit to scalable business, we're here to architect,
-      code, and deploy software with you.
-    </p>
-    <p>
-      Lots of people have ideas; many don't have partnerships that seek
-      understanding to help nuture, improve, and launch them.
-    </p>
-    <p>
-      Small businesses become sustainable by constantly improving with
-      flexibility and agility. With this philosophy, you'll not only
-      survive, but also grow and adapt faster than others. With passion and
-      hard work, a business is a life-long pursuit.
-    </p>
-    <p>
-      Partner with us to build your strong business efficiently.
-    </p>
+    <div class="ui container">
+      <h1 class="ui header">
+        <i class="ui cortlandt-red small circle thin icon">
+        </i>
+        values
+      </h1>
+      <p>
+        From product/market fit to scalable business, we're here to architect,
+        code, and deploy software with you.
+      </p>
+      <p>
+        Lots of people have ideas; many don't have partnerships that seek
+        understanding to help nuture, improve, and launch them.
+      </p>
+      <p>
+        Small businesses become sustainable by constantly improving with
+        flexibility and agility. With this philosophy, you'll not only
+        survive, but also grow and adapt faster than others. With passion and
+        hard work, a business is a life-long pursuit.
+      </p>
+      <p>
+        Partner with us to build your strong business efficiently.
+      </p>
+    </div>
   </div>
   <div class="sixthSegment segment">
   </div>
   <div class="seventhSegment segment" id="team">
-    <h1 class="ui header">
-      <i class="ui cortlandt-red small circle thin icon">
-      </i>
-      team
-    </h1>
-    <p>
-      With a wide range of experiences, we were inspired to dive into making
-      beautiful and meaningful things.
-    </p>
-    <p>
-      Happiness always has and always will be about the people: our team, the
-      open-source community, and our partnerships. We help each other through
-      the tough times and grow through shared opportunities and learning.
-    </p>
-    <p>
-      We're all in this together.
-    </p>
+    <div class="ui container">
+      <h1 class="ui header">
+        <i class="ui cortlandt-red small circle thin icon">
+        </i>
+        team
+      </h1>
+      <p>
+        With a wide range of experiences, we were inspired to dive into making
+        beautiful and meaningful things.
+      </p>
+      <p>
+        Happiness always has and always will be about the people: our team, the
+        open-source community, and our partnerships. We help each other through
+        the tough times and grow through shared opportunities and learning.
+      </p>
+      <p>
+        We're all in this together.
+      </p>
+    </div>
   </div>
+
   <footer class="ui inverted vertical footer segment">
     <img src="assets/Cortlandt-Labs-logo.png">
     <h3>Cortlandt Labs, LLC</h3>
