Add team photos to team segment

--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
         </i>
         team
       </h1>
+      <div class="team-photos ui three column grid">
+        <div class="profile-pic column">
+            <img id="aaron-profile-pic" class= "ui small centered circular image" src="assets/aaron.jpg" />
+            <p class="img-description">AARON<br>------<br>PRINCIPAL</p>
+        </div>
+        <div class="profile-pic column">
+            <img id="jack-profile-pic" class= "ui small centered circular image" src="assets/jack.jpg" />
+            <p class="img-description">JACK<br>------<br>PRINCIPAL</p>
+        </div>
+        <div class="profile-pic column">
+            <img id="jon-profile-pic" class= "ui small centered circular image" src="assets/jon.jpg" />
+            <p class="img-description">JON<br><br>PRINCIPAL</p>
+        </div>
+      </div>
       <p>
         With a wide range of experiences, we were inspired to dive into making
         beautiful and meaningful things.
