--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
       <div class="team-photos ui three column grid">
         <div class="profile-pic column">
             <img id="aaron-profile-pic" class= "ui small centered circular image" src="assets/aaron.jpg" />
-            <p class="img-description">AARON<br>------<br>PRINCIPAL</p>
+            <p class="img-description">aaron<br>•<br>principal</p>
         </div>
         <div class="profile-pic column">
             <img id="jack-profile-pic" class= "ui small centered circular image" src="assets/jack.jpg" />
-            <p class="img-description">JACK<br>------<br>PRINCIPAL</p>
+            <p class="img-description">jack<br>•<br>principal</p>
         </div>
         <div class="profile-pic column">
             <img id="jon-profile-pic" class= "ui small centered circular image" src="assets/jon.jpg" />
-            <p class="img-description">JON<br><br>PRINCIPAL</p>
+            <p class="img-description">jon<br>•<br>principal</p>
         </div>
       </div>
       <p>
