Change footer cortlandt font to neoteric

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
   <footer class="ui inverted vertical footer segment">
     <img src="assets/Cortlandt-Labs-logo.png">
-    <h3>Cortlandt Labs, LLC</h3>
+    <h2>Cortlandt Labs</h2>
     <p><i class="ui copyright icon"></i>2016 All Rights Reserved</p>
   </footer>
   <script>
