Change services to values

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="ui container">
     <div class="ui top fixed menu">
       <a class="item portfolio" href="#portfolio"><span>portfolio</span></a>
-      <a class="item services" href="#services"><span>services</span></a>
+      <a class="item values" href="#values"><span>values</span></a>
       <a class="item team" href="#team"><span>team</span></a>
       <a class="right item" href="mailto:Cortlandtlabs@gmail.com"><span>contact</span></a>
     </div>
