--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.3/components/icon.min.css">
-  <script   src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous" defer></script>
-  <script type="text/javascript" src="js/typed.js" defer></script>
-  <script type="text/javascript" src="js/semantic.js" defer></script>
-  <script type="text/javascript" src="js/main.js" defer></script>
-  <script type="text/javascript" src="js/smoothScroll.js" defer></script>
+  <script defer src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
+  <script defer type="text/javascript" src="js/typed.js"></script>
+  <script defer type="text/javascript" src="js/semantic.js"></script>
+  <script defer type="text/javascript" src="js/main.js"></script>
+  <script defer type="text/javascript" src="js/smoothScroll.js"></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
