Move Google Analytics to botton of </head>
Why:
Instructions here:
https://support.google.com/analytics/answer/1008080

Details:
Even though script is in the <head>, it is async as detailed here:
https://developers.google.com/analytics/devguides/collection/analyticsjs/

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <script defer type="text/javascript" src="js/main.js"></script>
   <script defer type="text/javascript" src="js/smoothScroll.js"></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-83286875-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 
 <body>
@@ -127,16 +137,5 @@
     <h2>Cortlandt Labs</h2>
     <p><i class="ui copyright icon"></i>2016 All Rights Reserved</p>
   </footer>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new
-        Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-83286875-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
 </body>
 </html>
