Fix spelling error

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </p>
       <p>
         Lots of people have ideas; many don't have partnerships that seek
-        understanding to help nuture, improve, and launch them.
+        understanding to help nurture, improve, and launch them.
       </p>
       <p>
         Small businesses become sustainable by constantly improving with
