--- a/index.html
+++ b/index.html
@@ -76,16 +76,18 @@
         values
       </h1>
       <p>
-        From product/market fit to scalable business, we're here to architect,
-        code, and deploy software with you.
-      </p>
-      <p>
         Lots of people have ideas; many don't have partnerships that seek
         understanding to help nurture, improve, and launch them.
       </p>
       <p>
-        Small businesses become sustainable by constantly improving with
-        flexibility and agility. With this philosophy, you'll not only
+        We focus on the user experience. We're here to architect, code, and
+        deploy software with you that improves the experiences of you and your
+        users; helping you figure out not only what people say they want, 
+        but what people really need. 
+      </p>
+      <p>
+        Businesses become sustainable by constantly improving with
+        flexibility and agility. With this philosophy, they'll not only
         survive, but also grow and adapt faster than others. With passion and
         hard work, a business is a life-long pursuit.
       </p>
@@ -127,7 +129,7 @@
         the tough times and grow through shared opportunities and learning.
       </p>
       <p>
-        We're all in this together.
+        Join us on this adventure together! 
       </p>
     </div>
   </div>
