--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
   </script>
   <link type="text/plain" rel="author" href="humans.txt" />
+  
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Cortlandt Labs" />
+  <meta property="og:description" content="Cortlandt Labs is a technology consulting agency started in NYC."
+  <meta property="og:site_name" content="Cortlandt Labs"/>
+  <meta property="og:url" content="http://cortlandtlabs.co/"/>
+  <meta property="og:image" content="https://raw.githubusercontent.com/cortlandtlabs/cortlandtlabs.github.io/master/assets/Cortlandt-Labs-logo.png"/>
+
 </head>
 
 <body>
