Add meta tag for description to adjust google description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Cortlandt Labs</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Cortlandt Labs is a technology consulting agency started in NYC. We're here to architect, code, and deploy software with you that improves the experiences of you and your users; helping you figure out not only what people say they want, but what people really need" />
   <!-- Meta tags for Open Graph -->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
