--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Cortlandt Labs is a technology consulting agency started in NYC." />
   <meta property="og:site_name" content="Cortlandt Labs"/>
   <meta property="og:url" content="http://cortlandtlabs.co/"/>
-  <meta property="og:image" content="https://raw.githubusercontent.com/cortlandtlabs/cortlandtlabs.github.io/master/assets/Cortlandt-Labs-logo.png"/>
+  <meta property="og:image" content="http://cortlandtlabs.co/assets/Cortlandt-Labs-logo.png"/>
   <!-- End of meta tags for Open Graph -->
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
