--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a class="item portfolio" href="#portfolio"><span>portfolio</span></a>
       <a class="item values" href="#values"><span>values</span></a>
       <a class="item team" href="#team"><span>team</span></a>
-      <a class="right item" href="mailto:Cortlandtlabs@gmail.com"><span>contact</span></a>
+      <a class="right item" href="contact.html"><span>contact</span></a>
     </div>
   </div>
   <div class="firstSegment segment">
