--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
 <body>
   <div class="ui container">
     <div class="ui top fixed menu">
-      <a class="item portfolio" href="#portfolio"><span>portfolio</span></a>
-      <a class="item values" href="#values"><span>values</span></a>
-      <a class="item team" href="#team"><span>team</span></a>
+      <a class="item portfolio" href="index.html#portfolio"><span>portfolio</span></a>
+      <a class="item values" href="index.html#values"><span>values</span></a>
+      <a class="item team" href="index.html#team"><span>team</span></a>
       <a class="right item" href="contact.html"><span>contact</span></a>
     </div>
   </div>
