--- a/contact.html
+++ b/contact.html
@@ -52,17 +52,22 @@
         </h1>
       <div class="field">
         <label>Name</label>
-        <input type="text" name="name" placeholder="Name">
+        <input type="text" name="name" placeholder="Name" required />
       </div>
       <div class="field">
         <label>E-mail</label>
-        <input type="text" name="email" placeholder="E-mail">
+        <input type="text" name="email" placeholder="E-mail" required />
+      </div>
+      <div class="field">
+        <label>Subject</label>
+        <input type="text" name="_subject" placeholder="Subject" required />
       </div>
       <div class="field">
         <label>Text</label>
         <textarea name="message"></textarea>
       </div>
       <input type="text" name="_gotcha" style="display:none" />
+      <input type="hidden" name="_next" value="http://cortlandtlabs.co/" />
       <button class="ui button" type="submit" value="Send">Submit</button>
     </form>
 </body>
