--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
       </div>
       <div class="field">
         <label>E-mail</label>
-        <input type="text" name="email" placeholder="E-mail" required />
+        <input type="email" name="email" placeholder="E-mail" required />
       </div>
       <div class="field">
         <label>Subject</label>
