Add g-suite confirmation snippet for verification purposes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   </script>
   <link type="text/plain" rel="author" href="humans.txt" />
+  <meta name="google-site-verification" content="GlgNk9NxtNdaMh4pgYwXMzTuAWH4tQ7bY4mc9frqxBw" />
 </head>
 
 <body>
