Add minified Semantic UI CSS from gulp

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:image" content="http://cortlandtlabs.co/assets/Cortlandt-Labs-logo.png"/>
   <meta name="google-site-verification" content="GlgNk9NxtNdaMh4pgYwXMzTuAWH4tQ7bY4mc9frqxBw" />
   <!-- End of meta tags for Open Graph -->
-  <link rel="stylesheet" type="text/css" href="css/semantic.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.3/components/icon.min.css">
   <script defer src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
@@ -94,8 +94,8 @@
       <p>
         We focus on the user experience. We're here to architect, code, and
         deploy software with you that improves the experiences of you and your
-        users; helping you figure out not only what people say they want, 
-        but what people really need. 
+        users; helping you figure out not only what people say they want,
+        but what people really need.
       </p>
       <p>
         Businesses become sustainable by constantly improving with
@@ -141,7 +141,7 @@
         the tough times and grow through shared opportunities and learning.
       </p>
       <p>
-        Join us on this adventure together! 
+        Join us on this adventure together!
       </p>
     </div>
   </div>
