closes open div tag (underneath form tag)

--- a/contact.html
+++ b/contact.html
@@ -70,5 +70,6 @@
       <input type="hidden" name="_next" value="http://cortlandtlabs.co/" />
       <button class="ui button" type="submit" value="Send">Submit</button>
     </form>
+  </div>
 </body>
 </html>
