Add segment 2 and 3

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   </script>
   <link type="text/plain" rel="author" href="humans.txt" />
-  <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 </head>
 
 <body>
@@ -61,13 +61,41 @@
     </div>
     <img class="logo" src="assets/cortlandtlabs_logo_text.png" />
   </div>
-  <div class="secondSegment segment">
+  <div class="secondSegment ui stackable padded grid ">
+    <div class="fourteen wide left aligned middle aligned centered column">
+      <h1 >Are you looking to...</h1>
+      <h2>Design a <span>Proof of Concept</span> to raise capital?</h2>
+      <h2>Create a <span>Minimum Viable Product</span> to attract users?</h2>
+      <h2>Build a <span>Production-level App</span> to change the world?</h2>
+    </div>
   </div>
-  <div class="thirdSegment segment">
+  <div class="thirdSegment ui stackable padded grid">
+    <div class="fourteen wide left aligned middle aligned centered column">
+      <h1 >Technology</h1>
+      <div class="ui three middle aligned cards">
+        <div class="card">
+          <div class="image">
+            <img src="assets/rails-logo.png">
+          </div>
+        </div>
+        <div class="card react">
+          <div class="image">
+            <img src="assets/react-logo.png">
+          </div>
+        </div>
+        <div class="card node">
+          <div class="image">
+            <img src="assets/nodejs-icon.png">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="fourthSegment segment">
   </div>
-  <div class="fifthSegment segment" id="values">
+  <div class="fifthSegment segment">
+  </div>
+  <div class="sixthSegment segment" id="values">
     <div class="ui container">
       <h1 class="ui header">
         <i class="ui cortlandt-red small circle thin icon">
@@ -95,9 +123,8 @@
       </p>
     </div>
   </div>
-  <div class="sixthSegment segment">
-  </div>
-  <div class="seventhSegment segment" id="team">
+
+  <div class="sixthSegment segment" id="team">
     <div class="ui container">
       <h1 class="ui header">
         <i class="ui cortlandt-red small circle thin icon">
