Add button that is not yet functional

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
   </div>
   <div class="thirdSegment ui padded grid">
-    <div class="fourteen wide middle aligned centered column">
+    <div class="ten wide middle aligned centered column">
       <h1>Technology</h1>
       <div class="ui divider"></div>
       <div class="ui three middle aligned cards">
@@ -132,6 +132,7 @@
           </h3>
         </div>
       </div>
+      <button class="ui big red button build">Start building</button>
     </div>    
   </div>
   <div class="sixthSegment ui padded grid " id="values">
